--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
-  "name": "spotifeed",
+  "name": "spotify-dashboard",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "axios": "^0.21.1",
+    "uuid": "^8.3.2",
+    "vue": "^3.2.4",
+    "vue-router": "^4.0.11",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.5",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-vue": "^7.16.0",
+    "eslint-plugin-vuejs-accessibility": "^0.7.1",
+    "sass": "^1.38.1",
     "vite": "^2.4.4"
   }
 }
