--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_SPOTIFY_API_BASE_URL=https://api.spotify.com/v1
 VITE_SPOTIFY_AUTH_URL=https://accounts.spotify.com/authorize
+VITE_SPOTIFY_API_BASE_URL=https://api.spotify.com/v1
+VITE_SPOTIFY_API_RELEASES_ENDPOINT=/browse/new-releases
